--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="add">Add</string>
     <string name="save">Save</string>
     <string name="delete">delete</string>
+    <string name="my_title">My Title</string>
+    <string name="some_random_description">Some random description</string>
     <string-array name="priorities">
         <item>High Priority</item>
         <item>Medium Priority</item>
